--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,7 @@
 
   <title>flutter_movies_app</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
